@@ -3,7 +3,12 @@ Package: R.rsp
 
 Version: 0.42.0-9000 [2018-04-06]
 
- * ...
+SIGNIFICANT CHANGES:
+
+ * Support for defining/overriding class-specific inline rpaste() methods
+   in an RSP document using setInlineRsp() is disabled for now.  This is
+   done in order for RSP vignettes not to fail under the new (prototype)
+   of how S3 methods are looked up in R-devel.
  
 BUG FIXES:
 
